<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zoo_activity">


    <SearchView
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="true"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/listview_Exhibits"
        android:layout_width="409dp"
        android:layout_height="288dp"
        android:layout_below="@+id/search"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:layout_editor_absoluteX="2dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/count"
        android:layout_width="164dp"
        android:layout_height="33dp"
        android:text="Plan Size: "
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="63dp"
        android:onClick="onPlanClicked"
        android:text="Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/number"
        android:layout_width="70dp"
        android:layout_height="67dp"
        android:text="0"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_Exhibits"
        app:layout_constraintVertical_bias="0.78" />

    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/exhibit_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:scrollbars= "vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_Exhibits"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="99dp"
        android:layout_height="64dp"
        android:text="Clear"
        android:onClick="onClearClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

</androidx.constraintlayout.widget.ConstraintLayout>